update run on web

--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "@react-navigation/bottom-tabs": "^6.0.5",
+    "@expo/webpack-config": "^0.17.3",
+    "@gorhom/bottom-sheet": "^4.4.5",
+    "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-navigation/material-bottom-tabs": "^6.2.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
+    "@react-navigation/stack": "^6.3.5",
+    "axios": "^0.21.1",
     "expo": "~47.0.8",
     "expo-asset": "~8.6.2",
     "expo-constants": "~14.0.2",
@@ -29,16 +34,31 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-gesture-handler": "^2.8.0",
+    "react-native-paper": "^4.12.5",
+    "react-native-reanimated": "^2.9.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
+    "react-native-svg-transformer": "^1.0.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.9"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@babel/runtime": "^7.12.5",
+    "@react-native-community/eslint-config": "^2.0.0",
     "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
+    "@types/react-native-vector-icons": "^6.4.12",
+    "@types/react-test-renderer": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.37.0",
+    "@typescript-eslint/parser": "^5.37.0",
+    "babel-jest": "^26.6.3",
+    "babel-plugin-react-native-web": "^0.18.10",
+    "eslint": "^7.32.0",
     "jest": "^26.6.3",
     "jest-expo": "~47.0.1",
+    "metro-react-native-babel-preset": "0.72.3",
     "react-test-renderer": "18.1.0",
     "typescript": "^4.6.3"
   },
